# kaleidoscope-rs

./: .gitignore  Cargo.toml  Makefile  avr-atmega32u4.json  rust-toolchain.toml
.cargo/: config.toml
src/: atomic.rs  bootloader.rs  driver.rs  error.rs  event_handler.rs  ffi.rs  hid_tables.rs  hooks.rs  interrupts.rs  key_addr_map.rs  key_event.rs  key_map.rs  keyswitch_state.rs  layers.rs  lib.rs  live_keys.rs  lock.rs  macros.rs  main.rs  millis.rs  plugins.rs  runtime.rs
src/driver/: bootloader.rs  hid.rs  keyscanner.rs  led.rs  mcu.rs  usb.rs  wdt.rs
src/driver/bootloader/: avr.rs
src/driver/bootloader/avr/: caterina.rs
src/driver/hid/: keyboardio.rs  settings.rs
src/driver/hid/base/: keyboard.rs
src/driver/hid/settings/: atreus.rs
src/driver/keyscanner/: atmega.rs  base.rs
src/driver/mcu/: atreus.rs
src/layers/: atreus.rs
src/plugins/: atreus.rs  macros.rs  ranges.rs
src/plugins/macros/: key_defs.rs
src/util/: bits.rs
